pkg/lang/syntax/testdata/ub/lower/invalid/schema-errors.ub
factory: {
  inputs: {
    bad: { type: list(unknown) }
  }

  resources: {
    std.file: {}
  }
}
